--- a/microservice-config/src/main/resources/configurations/msvc-usuario.yml
+++ b/microservice-config/src/main/resources/configurations/msvc-usuario.yml
@@ -4,3 +4,20 @@ server:
 spring:
   application:
    name: msvc-usuario
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.driver
+    url: jdbc:mysql://:localhost:3306/db_perfulandia_vm
+    username: root
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: update
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
