--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "MicroserviceUsuarioApplication",
+            "request": "launch",
+            "mainClass": "com.microservice.usuario.MicroserviceUsuarioApplication",
+            "projectName": "microservice-usuario"
+        },
+        {
+            "type": "java",
+            "name": "MicroserviceGatewayApplication",
+            "request": "launch",
+            "mainClass": "com.microservice.gateway.MicroserviceGatewayApplication",
+            "projectName": "microservice-gateway"
+        },
+        {
+            "type": "java",
             "name": "MicroserviceEurekaApplication",
             "request": "launch",
             "mainClass": "com.microservice.eureka.MicroserviceEurekaApplication",
